Remove notNull property from schema as a quick fix, adjust spacing in message component

--- a/client/src/components/Message/Message.css
+++ b/client/src/components/Message/Message.css
@@ -23,7 +23,7 @@
     flex-direction: column;
     background-color: #E8E8E8;
     border-radius: 3px 10px 10px 10px;
-    margin-left: 25%;
+    margin-left: 30%;
     margin-right: auto;
   }
   
